--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+@inproceedings{krishnan2024omninocs,
+  title={OmniNOCS: A unified NOCS dataset and model for 3D lifting of 2D objects},
+  author={Akshay Krishnan and Abhijit Kundu and Kevis-Kokitsi Maninis and James Hays and Matthew Brown},
+  booktitle={European Conference on Computer Vision},
+  year={2024},
+  html={https://omninocs.github.io/},
+  code={https://github.com/google-deepmind/omninocs},
+  arxiv={2407.08711},
+  preview={omninocs.gif},
+  selected={true},
+}
 
 @misc{baid2023distributed,
   title={Distributed Global Structure-from-Motion with a Deep Front-End}, 
