--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,17 @@
 ---
 ---
+@misc{krishnan2025orchid,
+  title={Orchid: Image Latent Diffusion for Joint Appearance and Geometry Generation},
+  author={Akshay Krishnan and Xinchen Yan and Vincent Casser and Abhijit Kundu},
+  year={2025},
+  html={https://orchid3d.github.io},
+  arxiv={2501.13087},
+  archivePrefix={arXiv},
+  primaryClass={cs.CV},
+  selected={true},
+  preview={orchid_preview.jpg},
+}
+
 @inproceedings{krishnan2024omninocs,
   title={OmniNOCS: A unified NOCS dataset and model for 3D lifting of 2D objects},
   author={Akshay Krishnan and Abhijit Kundu and Kevis-Kokitsi Maninis and James Hays and Matthew Brown},
