Update venue in bibliography entries

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,7 @@
 @misc{krishnan2025orchid,
   title={Orchid: Image Latent Diffusion for Joint Appearance and Geometry Generation},
   author={Akshay Krishnan and Xinchen Yan and Vincent Casser and Abhijit Kundu},
+  booktitle={International Conference on Computer Vision (ICCV)},
   year={2025},
   html={https://orchid3d.github.io},
   arxiv={2501.13087},
@@ -15,11 +16,13 @@
 @inproceedings{krishnan2024omninocs,
   title={OmniNOCS: A unified NOCS dataset and model for 3D lifting of 2D objects},
   author={Akshay Krishnan and Abhijit Kundu and Kevis-Kokitsi Maninis and James Hays and Matthew Brown},
-  booktitle={European Conference on Computer Vision},
+  booktitle={European Conference on Computer Vision (ECCV)},
   year={2024},
   html={https://omninocs.github.io/},
   code={https://github.com/google-deepmind/omninocs},
   arxiv={2407.08711},
+  archivePrefix={arXiv},
+  primaryClass={cs.CV},
   preview={omninocs.gif},
   selected={true},
 }
